# rogue-scholar

./: .dockerignore  .env.example  .gitignore  CNAME  Caddyfile  Dockerfile  Dockerfile.staging  LICENSE  Makefile  README.md  compose.yaml  compose.yml  cors.json  docker-compose.yml  entrypoint.py  entrypoint.sh  fly.toml  gunicorn.conf.py  invenio.cfg  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  setup.sh
.github/: FUNDING.yml
.github/workflows/: pages.yaml  publish-docs.yaml  register-dois.yaml  release.yaml  update-blogs.yaml  update-citations.yaml  update-dois.yaml  update-posts.yaml  update-records.yaml
app_data/: pages.yaml  vocabularies.yaml
app_data/pages/: board.html
app_data/vocabularies/: affiliations_ror.yaml  awards.yaml  feed_formats.yaml  generator_types.yaml  names.yaml  resource_types.yaml  roles.yaml  subjects_oecd_fos.yaml  subjects_openalex.yaml  subjects_openalex_domains.yaml  subjects_openalex_fields.yaml  subjects_openalex_subfields.yaml  subjects_openalex_topics.yaml
assets/js/invenio_app_rdm/landing_page/: RecordCitationField.js  index.js
assets/js/invenio_app_rdm/overridableRegistry/: RecordsList.js  RecordsResultsListItem.js  Utils.js  index.js  (+1 more)
config/: config.alloy  daemon.json  deploy.staging.yml  deploy.yml  valkey.conf  vector.toml  vector.yml
docs/: .gitignore  _publish.yml  _quarto.yml  api.qmd  blogger.qmd  dashboard.qmd  doi.qmd  ghost.qmd  guidelines.qmd  hugo.qmd  index.qmd  jekyll.qmd  metadata.qmd  platforms.qmd  plausible.html  quarto.qmd  references.json  references.qmd  statistics.qmd  theme.scss  wordpress.qmd
fly/applications/rabbitmq/: Dockerfile  fly.toml  prod.conf
fly/applications/valkey/: fly.toml
scripts/: create_volume_collections.py  delete_detached_files.sql  enable_collections.py  fix_generator_field.py  fix_staging_request_files.py  update_subjects.py
site/rogue_scholar/: __init__.py  celery_logging.py  generators.py  permissions.py  redirector.py  serializers.py  views.py
site/tests/: conftest.py  test_api_version_endpoint.py  test_celery_logging.py  test_metrics_endpoint.py  test_permissions.py  test_redirector.py
static/: robots.txt
templates/semantic-ui/invenio_app_rdm/: footer.html  frontpage.html  frontpage_metrics.html  frontpage_title.cs.html  frontpage_title.de.html  frontpage_title.en.html  frontpage_title.es.html  frontpage_title.fr.html  frontpage_title.it.html  frontpage_title.nl.html  frontpage_title.pt.html  frontpage_title.sl.html  frontpage_title.sv.html  frontpage_title.tr.html  header.html  header_frontpage.html  header_login.html  page_admin.html  search.es.html  search.it.html  search.nl.html  search.sl.html  search.tr.html  sidebar.cs.html  sidebar.de.html  sidebar.en.html  sidebar.es.html  sidebar.fr.html  sidebar.it.html  sidebar.nl.html  sidebar.pt.html  sidebar.sl.html  sidebar.sv.html  sidebar.tr.html  site_footer.html  trackingcode.html
translations/cs/LC_MESSAGES/: messages.po
translations/de/LC_MESSAGES/: messages.po
translations/en/LC_MESSAGES/: messages.po
translations/es/LC_MESSAGES/: messages.po
translations/fr/LC_MESSAGES/: messages.po
translations/it/LC_MESSAGES/: messages.po
translations/nl/LC_MESSAGES/: messages.po
translations/pt/LC_MESSAGES/: messages.po
translations/sl/LC_MESSAGES/: messages.po
translations/sv/LC_MESSAGES/: messages.po
translations/tr/LC_MESSAGES/: messages.po
(+80 files in other folders)
