[project]
name = "rogue-scholar"
version = "14.0.0.0"
description = "Rogue Scholar is a science blog archive based on the InvenioRDM repository software."
authors = [{ name = "Martin Fenner", email = "martin@front-matter.io" }]
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "invenio-app-rdm",
    "invenio-search[opensearch2]>=3.0.0",
    "invenio-rdm-records",
    "invenio-previewer>=3.3.0,<3.4.0",
    "gunicorn~=23.0.0",
]

[tool.uv.sources]
invenio-app-rdm = { git = "https://github.com/front-matter/invenio-app-rdm", branch = "roguescholar" }
invenio-rdm-records = { git = "https://github.com/front-matter/invenio-rdm-records", branch = "crossref_pid_provider" }
invenio-pages = { git = "https://github.com/front-matter/invenio-pages", branch = "idempotent-migrations" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["site/rogue_scholar/*.py"]

[tool.ruff]
line-length = 79
include = ["pyproject.toml", "site/**/*.py"]

[project.optional-dependencies]
docs = ["quarto-cli~=1.7.31"]
actions = ["commonmeta-py>=0.187"]
