[project]
name = "rogue-scholar"
version = "14.0.0.3"
description = "Rogue Scholar is a science blog archive based on the InvenioRDM repository software."
authors = [{ name = "Martin Fenner", email = "martin@front-matter.de" }]
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"
dependencies = [
    "invenio-app-rdm>=14.0.0b5.dev2",
    "invenio-search[opensearch2]>=3.1.2,<3.2.0",
    "invenio-s3>=3.0.2",
    "invenio-rdm-records",
    "invenio-oauthclient",
    "setuptools>=70,<81",
    "gunicorn~=23.0.0",
]

[tool.uv.sources]
invenio-rdm-records = { git = "https://github.com/front-matter/invenio-rdm-records", branch = "crossref_doi_provider" }
invenio-oauthclient = { git = "https://github.com/front-matter/invenio-oauthclient", branch = "contrib-oidc" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["site/rogue_scholar/*.py"]

[tool.ruff]
line-length = 79
include = ["pyproject.toml", "site/**/*.py"]

[project.optional-dependencies]
docs = ["quarto-cli~=1.8.25"]
actions = ["commonmeta-py>=0.203"]
